--- a/final_project/_site.yml
+++ b/final_project/_site.yml
@@ -7,7 +7,7 @@ navbar:
     - text: "Supplementary"
       href: supp.html
     - text: "Github"
-      href: https://github.com/ramayyala/PM566-Labs/tree/master/final_project
+      href: https://github.com/ramayyala
     - text: "LinkedIn"
       href: https://www.linkedin.com/in/ram-ayyala-429181123/
       
